--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>자연 풍경 랜딩페이지</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .hero-image {
+            background: url('assets/images/hero.jpg') no-repeat center/cover;
+        }
+        .gallery-image {
+            background: url('assets/images/gallery1.jpg') no-repeat center/cover;
+        }
+        /* 추가 갤러리 이미지 */
+        .gallery-image:nth-child(2) { background-image: url('assets/images/gallery2.jpg'); }
+        .gallery-image:nth-child(3) { background-image: url('assets/images/gallery3.jpg'); }
+        .gallery-image:nth-child(4) { background-image: url('assets/images/gallery4.jpg'); }
+    </style>
+</head>
+<body class="font-sans bg-gray-900 text-white">
+    <!-- Header -->
+    <header class="bg-black bg-opacity-50 text-white py-4 sticky top-0 z-10">
+        <div class="container mx-auto flex justify-between items-center px-4">
+            <h1 class="text-3xl font-bold">加時沐</h1>
+            <nav>
+                <a href="#shop" class="mr-4 hover:underline">Shop</a>
+                <a href="#contact" class="hover:underline">Contact</a>
+            </nav>
+        </div>
+    </header>
 
+    <!-- Hero Section -->
+    <section class="hero-image min-h-screen flex items-center justify-center text-center bg-black bg-opacity-50">
+        <div>
+            <h2 class="text-5xl font-extrabold mb-4">수목원을 넘어 복합 문화 공간을 지향하다.</h2>
+            <p class="text-xl mb-6">2025년 봄, 약 4,000평 규모의 수목원과 힐링 공간, 문화 예술 공간이 결합된 복합 문화 공간이 문을 엽니다. 자연 속에서 힐링과 예술을 즐길 수 있는 특별한 장소입니다.</p>
+            <div class="relative w-16 h-16 mx-auto">
+                <div class="absolute inset-0 flex items-center justify-center bg-gray-800 rounded-full cursor-pointer hover:bg-gray-700">
+                    ▶
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="py-16 bg-gray-800">
+        <div class="container mx-auto text-center px-4">
+            <h3 class="text-3xl font-bold mb-6">제주 4호 민간정원</h3>
+            <p class="text-lg mb-4">2000년 설립 이후 약 20년간의 정원 조성 과정을 거쳐 2020년 7월에 정식 개원했습니다. 현재 약 4,000평 규모의 수목원과 힐링 공간, 문화 예술 공간이 결합된 복합 문화 공간으로 자리 잡았습니다. 자연과 예술이 어우러진 공간에서 힐링과 문화를 경험해 보세요.</p>
+        </div>
+    </section>
+
+    <!-- Space Section -->
+    <section class="py-16 bg-gray-900">
+        <div class="container mx-auto text-center px-4">
+            <h3 class="text-3xl font-bold mb-6">수목원 여덟 개 강의에서 체험 가능한 공간</h3>
+            <p class="text-lg mb-4">자연과 힐링, 예술이 결합된 공간에서 특별한 경험을 제공합니다. 다양한 테마의 공간을 통해 자연과 조화를 이루는 시간을 만끽하세요.</p>
+            <div class="grid grid-cols-2 gap-4 mt-6 max-w-2xl mx-auto">
+                <div class="gallery-image h-48 rounded-lg"></div>
+                <div class="gallery-image h-48 rounded-lg"></div>
+                <div class="gallery-image h-48 rounded-lg"></div>
+                <div class="gallery-image h-48 rounded-lg"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 py-6 text-center">
+        <p class="text-sm">&copy; 2025 加時 沐. All rights reserved.</p>
+    </footer>
+</body>
+</html>
