--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자연 풍경 랜딩페이지</title>
+    <title>가시림</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Zen+Old+Mincho:wght@400&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
         h1 {
             font-family: 'Zen Old Mincho', serif;
             font-weight: 400;
-            font-size: 128px;
+            font-size: 500px;
         }
         h2 {
             font-family: 'Inter', sans-serif;
