"Add <base href> to index"

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>加 時 林 | 가시림</title>
+  <base href="/gasirim.github.io/">
 
   <!-- Global & Design CSS -->
   <link rel="stylesheet" href="assets/css/globals.css">
