smart scaling and a few improvs

--- a/index.html
+++ b/index.html
@@ -1,127 +1,108 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>加 時 林 | 가시림</title>
-  <base href="/gasirim.github.io/">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>가시림 | 加 時 林</title>
+  <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
+  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
-  <!-- Global & Design CSS -->
-  <link rel="stylesheet" href="assets/css/globals.css">
-  <link rel="stylesheet" href="assets/css/styleguide.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Preload the big header background (faster perceived load) -->
+  <link rel="preload" as="image" href="https://via.placeholder.com/1440x877">
 
-  <!-- JS -->
-  <script defer src="assets/js/includes.js"></script>
-  <script defer src="assets/js/main.js"></script>
+
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Zen+Old+Mincho&family=Nanum+Myeongjo&display=swap"/>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="assets/css/styleguide.css"/>
+  <link rel="stylesheet" href="assets/css/globals.css"/>
+  <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
   <div class="page">
+    <!-- Header (loaded from /partials/header.html) -->
+    <div id="site-header" data-include="partials/header.html"></div>
 
-    <!-- Shared Header -->
-    <div id="site-header"></div>
+    <!-- 가시림 소개 (Intro) -->
+    <section class="intro" aria-labelledby="intro-heading">
+      <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
 
-    <!-- Main Content -->
-    <main>
+      <div class="intro-article intro-top reveal from-up">
+        <h3 class="intro-heading">수목원을 넘어 복합 문화 공간을 지향하다.</h3>
+        <p class="intro-p">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
+      </div>
 
-      <!-- ============================= -->
-      <!-- Head Panel -->
-      <!-- ============================= -->
-      <section class="head-panel reveal from-up parallax" style="background: var(--overlay-top), url('https://via.placeholder.com/1440x877') center/cover no-repeat;">
-        <div class="website-title">
-          <h1 class="title">加 時 林</h1>
-          <h2 class="subtitle">치유의 정원</h2>
-        </div>
-        <nav class="navbar">
-          <ul class="nav-main">
-            <li class="nav-item">소개</li>
-            <li class="nav-item">방문</li>
-            <li class="nav-item">프로그램</li>
-            <li class="nav-item">Shop</li>
-          </ul>
-        </nav>
-      </section>
+      <div class="intro-hero reveal parallax from-up"></div>
 
-      <!-- ============================= -->
-      <!-- 가시림 소개 (Intro) -->
-      <!-- ============================= -->
-      <section class="intro reveal from-up">
-        <h2 class="h2 text-center">가시림 소개</h2>
-        <p class="p-lg text-center">
-          가시림은 원예, 명상, 예술 프로그램을 통해 자연을 다각도로 체험할 수 있도록 하는 복합 문화 공간입니다.
-          이곳에서 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 가질 수 있습니다.
-        </p>
-        <!-- Example images -->
-        <div class="intro-images">
-          <img src="https://via.placeholder.com/694x481" alt="가시림 이미지 1">
-          <img src="https://via.placeholder.com/858x367" alt="가시림 이미지 2">
-          <img src="https://via.placeholder.com/360x1329" alt="가시림 이미지 3">
+      <div class="intro-article intro-jeju reveal from-left">
+        <h3 class="intro-heading">제주 4호 민간정원</h3>
+        <p class="intro-p">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
+      </div>
+
+      <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리">
+        <div class="intro-gallery-track">
+          <div class="gimg gimg-a" role="img" aria-label="갤러리 이미지 A"></div>
+          <div class="gimg gimg-b" role="img" aria-label="갤러리 이미지 B"></div>
+          <div class="gimg gimg-c" role="img" aria-label="갤러리 이미지 C"></div>
         </div>
       </section>
 
-      <!-- ============================= -->
-      <!-- 메인 시설 소개 (Facilities grid) -->
-      <!-- ============================= -->
-      <section class="facilities reveal from-up">
-        <h2 class="facilities-title">Space</h2>
-        <div class="facilities-grid">
-          <a href="#garden" class="facility-card">
-            <div class="facility-image" style="background-image:url('https://via.placeholder.com/624x470')">
-              <span class="facility-label">가든 센터</span>
-            </div>
-          </a>
-          <a href="#cafe" class="facility-card">
-            <div class="facility-image" style="background-image:url('https://via.placeholder.com/624x470')">
-              <span class="facility-label">카페</span>
-            </div>
-          </a>
-          <a href="#edu" class="facility-card">
-            <div class="facility-image" style="background-image:url('https://via.placeholder.com/624x470')">
-              <span class="facility-label">교육실</span>
-            </div>
-          </a>
-          <a href="#etc" class="facility-card">
-            <div class="facility-image" style="background-image:url('https://via.placeholder.com/624x470')">
-              <span class="facility-label">(?)</span>
-            </div>
-          </a>
-        </div>
-      </section>
+      <div class="intro-article intro-how reveal from-right">
+        <h3 class="intro-heading right">수목원은 어떻게 감상해야 하는가</h3>
+        <p class="intro-p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
+      </div>
 
-      <!-- ============================= -->
-      <!-- 메인 시설 소개 (Interactive cards) -->
-      <!-- ============================= -->
-      <section class="main-space" id="space">
-        <h2 class="space-title">Space</h2>
-        <div class="space-cards">
-          <a class="space-card" href="#garden-center" aria-label="가든 센터">
-            <div class="space-img" style="--bg:url('https://picsum.photos/seed/garden/1248/940');"></div>
-            <div class="space-overlay"></div>
-            <div class="space-label">가든 센터</div>
-          </a>
-          <a class="space-card" href="#cafe" aria-label="카페">
-            <div class="space-img" style="--bg:url('https://picsum.photos/seed/cafe/1248/940');"></div>
-            <div class="space-overlay"></div>
-            <div class="space-label">카페</div>
-          </a>
-          <a class="space-card" href="#classroom" aria-label="교육실">
-            <div class="space-img" style="--bg:url('https://picsum.photos/seed/classroom/1248/940');"></div>
-            <div class="space-overlay"></div>
-            <div class="space-label">교육실</div>
-          </a>
-          <a class="space-card" href="#tbd" aria-label="미정 공간">
-            <div class="space-img" style="--bg:url('https://picsum.photos/seed/extra/1248/940');"></div>
-            <div class="space-overlay"></div>
-            <div class="space-label">(?)</div>
-          </a>
-        </div>
-      </section>
+      <div class="intro-img-wide reveal from-left"></div>
+      <div class="intro-img-tall reveal from-right"></div>
+      <div class="intro-img-long reveal from-up"></div>
 
-    </main>
+      <div class="intro-article intro-bottom reveal from-up">
+        <h3 class="intro-heading">자연을 다각도에서 체험하다</h3>
+        <p class="intro-p">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있도록 한다. 이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 된다.</p>
+      </div>
 
-    <!-- Shared Footer -->
-    <div id="site-footer"></div>
+      <div class="intro-mosaic-right reveal from-right"></div>
+      <div class="intro-mosaic-left-top reveal from-left"></div>
+      <div class="intro-mosaic-left-bottom reveal from-left"></div>
+    </section>
 
+    <!-- Main Space Section -->
+    <section class="main-space" id="space" aria-labelledby="space-heading">
+      <h2 id="space-heading" class="space-title">Space</h2>
+      <div class="space-cards">
+        <a class="space-card" href="#garden-center" aria-label="가든 센터">
+          <div class="space-img" style="--bg:url('https://picsum.photos/seed/garden/1248/940');"></div>
+          <div class="space-overlay"></div>
+          <div class="space-label">가든 센터</div>
+        </a>
+        <a class="space-card" href="#cafe" aria-label="카페">
+          <div class="space-img" style="--bg:url('https://picsum.photos/seed/cafe/1248/940');"></div>
+          <div class="space-overlay"></div>
+          <div class="space-label">카페</div>
+        </a>
+        <a class="space-card" href="#classroom" aria-label="교육실">
+          <div class="space-img" style="--bg:url('https://picsum.photos/seed/classroom/1248/940');"></div>
+          <div class="space-overlay"></div>
+          <div class="space-label">교육실</div>
+        </a>
+        <a class="space-card" href="#tbd" aria-label="미정 공간">
+          <div class="space-img" style="--bg:url('https://picsum.photos/seed/extra/1248/940');"></div>
+          <div class="space-overlay"></div>
+          <div class="space-label">(?)</div>
+        </a>
+      </div>
+    </section>
+
+    <!-- Footer (loaded from /partials/footer.html) -->
+    <div id="site-footer" data-include="partials/footer.html"></div>
   </div>
+
+  <!-- JS -->
+  <script src="assets/js/includes.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
 </body>
 </html>
