Replace head panel background with real image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="https://via.placeholder.com/1440x877">
+  <link rel="preload" as="image" href="assets/img/main.jpg">
+
 
 
 
