accidently made too many edits: created all pages with basic set-up, created site header, optimized existing styles so it can be reused

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <!-- Preload the big header background (faster perceived load) -->
   <link rel="preload" as="image" href="assets/img/main.jpg">
 
-
-
-
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,23 +22,23 @@
 </head>
 <body>
   <div class="page">
-    <!-- Header (loaded from /partials/header.html) -->
-    <div id="site-header" data-include="partials/header.html"></div>
+    <!-- Header (loaded from /partials/header-landing.html) -->
+    <div id="landing-header" data-include="partials/header-landing.html"></div>
 
-    <!-- 가시림 소개 (Intro) -->
-    <section class="intro" aria-labelledby="intro-heading">
+    <!-- 가시림 소개 -->
+    <section class="body-container" aria-labelledby="intro-heading">
       <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
 
-      <div class="intro-article intro-top reveal from-up">
-        <h3 class="intro-heading">수목원을 넘어 복합 문화 공간을 지향하다.</h3>
-        <p class="intro-p">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
+      <div class="article article-container reveal from-up">
+        <h3 class="h center">수목원을 넘어 복합 문화 공간을 지향하다.</h3>
+        <p class="p center">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
       </div>
 
       <div class="intro-hero reveal parallax from-up"></div>
 
-      <div class="intro-article intro-jeju reveal from-left">
-        <h3 class="intro-heading">제주 4호 민간정원</h3>
-        <p class="intro-p">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
+      <div class="article article-container reveal from-left">
+        <h3 class="h left">제주 4호 민간정원</h3>
+        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
       </div>
 
       <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리">
@@ -52,18 +49,18 @@
         </div>
       </section>
 
-      <div class="intro-article intro-how reveal from-right">
-        <h3 class="intro-heading right">수목원은 어떻게 감상해야 하는가</h3>
-        <p class="intro-p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
+      <div class="article article-container reveal from-right">
+        <h3 class="h right">수목원은 어떻게 감상해야 하는가</h3>
+        <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
       </div>
 
       <div class="intro-img-wide reveal from-left"></div>
       <div class="intro-img-tall reveal from-right"></div>
       <div class="intro-img-long reveal from-up"></div>
 
-      <div class="intro-article intro-bottom reveal from-up">
-        <h3 class="intro-heading">자연을 다각도에서 체험하다</h3>
-        <p class="intro-p">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있도록 한다. 이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 된다.</p>
+      <div class="article article-container reveal from-up">
+        <h3 class="h left">자연을 다각도에서 체험하다</h3>
+        <p class="p left">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있도록 한다. 이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 된다.</p>
       </div>
 
       <div class="intro-mosaic-right reveal from-right"></div>
