--- a/pages/소개/공간소개.html
+++ b/pages/소개/공간소개.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <header id="site-header" class="shop-panel" data-include="../partials/header-site.html"></header>
+    <header id="site-header" class="intro-panel" data-include="../partials/header-site.html"></header>
 
     <!-- 가시림 소개 -->
     <section class="body-container" aria-labelledby="intro-heading">
