removed pages file

--- a/shop.html
+++ b/shop.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>소개 | 가시림</title>
+  <title>Shop | 가시림</title>
   <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
-  <link rel="icon" href="../assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="../assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/main.jpg">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,15 +16,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Zen+Old+Mincho&family=Nanum+Myeongjo&display=swap"/>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../assets/css/styleguide.css"/>
-  <link rel="stylesheet" href="../assets/css/globals.css"/>
-  <link rel="stylesheet" href="../assets/css/style.css"/>
+  <link rel="stylesheet" href="assets/css/styleguide.css"/>
+  <link rel="stylesheet" href="assets/css/globals.css"/>
+  <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
   <div class="page">
     
     <!-- Header -->
-    <header id="site-header" class="intro-panel" data-include="../partials/header-site.html"></header>
+    <header id="site-header" class="shop-panel" data-include="partials/header-site.html"></header>
 
     <!-- 가시림 소개 -->
     <section class="body-container" aria-labelledby="intro-heading">
@@ -70,11 +70,11 @@
     </section>
 
     <!-- Footer (loaded from /partials/footer.html) -->
-    <div id="site-footer" data-include="../partials/footer.html"></div>
+    <div id="site-footer" data-include="partials/footer.html"></div>
   </div>
 
   <!-- JS -->
-  <script src="../assets/js/includes.js" defer></script>
-  <script src="../assets/js/main.js" defer></script>
+  <script src="assets/js/includes.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
 </body>
 </html>
