--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
       <h2 id="space-heading" class="space-title">Space</h2>
       <div class="space-cards">
         <a class="space-card" href="#garden-center" aria-label="가든 센터">
-          <div class="space-img" style="--bg:url('https://picsum.photos/seed/garden/1248/940');"></div>
+          <div class="space-img" style="--bg:url('../img/가든센터.jpg');"></div>
           <div class="space-overlay"></div>
           <div class="space-label">가든 센터</div>
         </a>
         <a class="space-card" href="#cafe" aria-label="카페">
-          <div class="space-img" style="--bg:url('https://picsum.photos/seed/cafe/1248/940');"></div>
+          <div class="space-img" style="--bg:url('../img/카페.jpg');"></div>
           <div class="space-overlay"></div>
           <div class="space-label">카페</div>
         </a>
@@ -89,7 +89,7 @@
           <div class="space-label">교육실</div>
         </a>
         <a class="space-card" href="#tbd" aria-label="미정 공간">
-          <div class="space-img" style="--bg:url('https://picsum.photos/seed/extra/1248/940');"></div>
+          <div class="space-img" style="--bg:url('../img/유리온실.jpg');"></div>
           <div class="space-overlay"></div>
           <div class="space-label">(?)</div>
         </a>
