changed classroom photo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="space-label">카페</div>
         </a>
         <a class="space-card" href="#classroom" aria-label="교육실">
-          <div class="space-img" style="--bg:url('../img/유리온실.jpg');"></div>
+          <div class="space-img" style="--bg:url('../img/유리온실2.jpg');"></div>
           <div class="space-overlay"></div>
           <div class="space-label">교육실</div>
         </a>
