--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a class="space-card" href="#garden-center" aria-label="가든 센터">
           <div class="space-img" style="--bg:url('../img/가든센터.jpg');"></div>
           <div class="space-overlay"></div>
-          <div class="space-label">가든 센터</div>
+          <div class="space-label">식물 온실</div>
         </a>
         <a class="space-card" href="#cafe" aria-label="카페">
           <div class="space-img" style="--bg:url('../img/카페.jpg');"></div>
@@ -86,12 +86,12 @@
         <a class="space-card" href="#classroom" aria-label="교육실">
           <div class="space-img" style="--bg:url('../img/유리온실2.jpg');"></div>
           <div class="space-overlay"></div>
-          <div class="space-label">교육실</div>
+          <div class="space-label">마음 온실</div>
         </a>
         <a class="space-card" href="#tbd" aria-label="미정 공간">
           <div class="space-img" style="--bg:url('../img/유리온실.jpg');"></div>
           <div class="space-overlay"></div>
-          <div class="space-label">(?)</div>
+          <div class="space-label">식물 가게</div>
         </a>
       </div>
     </section>
