--- a/수목원지도.html
+++ b/수목원지도.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <header id="site-header" class="intro-panel" data-include="partials/header-site.html"></header>
+    <div id="site-header" data-include="partials/header-site.html"></div>
 
     <!-- 가시림 소개 -->
     <section class="body-container" aria-labelledby="intro-heading">
