Load Embla Carousel before main script

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
   <!-- JS -->
   <script src="assets/js/includes.js" defer></script>
+  <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
