--- a/오시는길.html
+++ b/오시는길.html
@@ -77,6 +77,7 @@
   <!-- JS -->
   <script src="assets/js/includes.js" defer></script>
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
+  <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
