--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header (loaded from /partials/header-landing.html) -->
-    <div id="landing-header" data-include="partials/header-landing.html"></div>
+    <!-- <div id="landing-header" data-include="partials/header-landing.html"></div> -->
 
     <!-- 가시림 소개 -->
     <section class="body-container" aria-labelledby="intro-heading">
