created bar.html to move nav out of the wrapper (landing-header)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="page">
     
-    <!-- Header (loaded from /partials/header-landing.html) -->
+    <div id="landing-bar" data-include="partials/sticky-header-bar.html"></div>
     <div id="landing-header" data-include="partials/header-landing.html"></div>
 
     <!-- 가시림 소개 -->
