added youtube video

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="intro-hero reveal parallax from-up">
         <iframe
-          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          src="https://www.youtube.com/watch?v=Ofd87YPeZPw"
           title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
