Revert "Fix hero video height and header visuals"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="p center">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
       </div>
 
-      <div class="intro-hero intro-hero--video reveal parallax from-up">
+      <div class="intro-hero reveal parallax from-up">
         <iframe
           width="560"
           height="315"
