--- a/소개.html
+++ b/소개.html
@@ -25,6 +25,7 @@
 
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
       <nav class="intro-tabs" role="tablist" aria-label="소개 섹션">
