--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
-  <!-- Preload the big header background (faster perceived load) 
-  <link rel="preload" as="image" href="assets/img/main.jpg">  -->
+  <!-- Preload the big header background (faster perceived load) -->
+  <link rel="preload" as="image" href="assets/img/main.jpg">  
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
