--- a/index.html
+++ b/index.html
@@ -81,28 +81,28 @@
     </section>
 
     <!-- Main Space Section -->
-    <section class="main-space" id="space" aria-labelledby="space-heading">
-      <h2 id="space-heading" class="space-title">Space</h2>
-      <div class="space-cards">
-        <a class="space-card" href="#garden-center" aria-label="가든 센터">
-          <div class="space-img" style="--bg:url('../img/가든센터.jpg');"></div>
-          <div class="space-overlay"></div>
-          <div class="space-label">식물 온실</div>
+    <section class="cards-space" id="space" aria-labelledby="space-heading">
+      <h2 id="space-heading" class="cards-title">Space</h2>
+      <div class="cards">
+        <a class="card" href="#garden-center" aria-label="가든 센터">
+          <div class="card-img" style="--bg:url('../img/가든센터.jpg');"></div>
+          <div class="card-overlay"></div>
+          <div class="card-label">식물 온실</div>
         </a>
-        <a class="space-card" href="#cafe" aria-label="카페">
-          <div class="space-img" style="--bg:url('../img/카페.jpg');"></div>
-          <div class="space-overlay"></div>
-          <div class="space-label">카페</div>
+        <a class="card" href="#cafe" aria-label="카페">
+          <div class="card-img" style="--bg:url('../img/카페.jpg');"></div>
+          <div class="card-overlay"></div>
+          <div class="card-label">카페</div>
         </a>
-        <a class="space-card" href="#classroom" aria-label="교육실">
-          <div class="space-img" style="--bg:url('../img/유리온실2.jpg');"></div>
-          <div class="space-overlay"></div>
-          <div class="space-label">마음 온실</div>
+        <a class="card" href="#classroom" aria-label="교육실">
+          <div class="card-img" style="--bg:url('../img/유리온실2.jpg');"></div>
+          <div class="card-overlay"></div>
+          <div class="card-label">마음 온실</div>
         </a>
-        <a class="space-card" href="#tbd" aria-label="미정 공간">
-          <div class="space-img" style="--bg:url('../img/유리온실.jpg');"></div>
-          <div class="space-overlay"></div>
-          <div class="space-label">식물 가게</div>
+        <a class="card" href="#tbd" aria-label="미정 공간">
+          <div class="card-img" style="--bg:url('../img/유리온실.jpg');"></div>
+          <div class="card-overlay"></div>
+          <div class="card-label">식물 가게</div>
         </a>
       </div>
     </section>
