--- a/소개.html
+++ b/소개.html
@@ -28,18 +28,22 @@
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
+      <!-- Navigation Tab -->
       <nav class="intro-tabs" data-tabs role="tablist" aria-label="소개 섹션">
         <button class="tab-button active" role="tab" id="tab-space" aria-controls="panel-space" aria-selected="true">공간 소개</button>
         <button class="tab-button" role="tab" id="tab-map" aria-controls="panel-map" aria-selected="false">수목원 지도</button>
         <button class="tab-button" role="tab" id="tab-tour" aria-controls="panel-tour" aria-selected="false">둘러 보기</button>
       </nav>
 
+      <!-- 공간소개 -->
       <section id="panel-space" class="tab-panel" role="tabpanel" tabindex="0">
+        <!-- Toggle Button -->
         <div class="space-tabs" data-tabs role="tablist" aria-label="공간소개 분류">
           <button class="tab-button active" role="tab" id="tab-facility" aria-controls="panel-facility" aria-selected="true">시설</button>
           <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
         </div>
-        <section id="panel-facility" class="space-panel" role="tabpanel" tabindex="0">
+        <!-- 시설 공간 소개 -->
+        <section id="panel-facility" class="space-panel" role="tabpanel" tabindex="0" href="#facility">
           <div class="card-grid">
             <article class="intro-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="intro-card-img"/>
@@ -51,6 +55,7 @@
             </article>
           </div>
         </section>
+        <!-- 정원 공간 소개 -->
         <section id="panel-garden-detail" class="space-panel" role="tabpanel" tabindex="0" hidden>
           <div class="card-grid">
             <article class="intro-card">
@@ -65,12 +70,34 @@
         </section>
       </section>
 
-      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" hidden>
-        <p class="p center">수목원 지도 콘텐츠가 준비 중입니다.</p>
+      <!-- 수목원 지도 -->
+      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#map">
+        <div class="article article-container reveal from-up">
+          <h2 class="h2 center">수목원 지도</h2>
+        </div>
+        <!-- 지도 -->
+        <div class="intro-hero reveal parallax from-up">
+          <iframe
+            width="560"
+            height="315"
+            src="assets/img/main.jpg"
+            title="map"
+            frameborder="0"
+          ></iframe>
+        </div>
+        <!-- 스팟 리스트????? -->
       </section>
 
-      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden>
-        <p class="p center">둘러보기 콘텐츠가 준비 중입니다.</p>
+      <!-- 둘러 보기 -->
+      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
+        <div class="cards">
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+          </div>
       </section>
     </main>
 
