--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <!-- Main Space Section -->
-    <section class="cards-space" id="space" aria-labelledby="space-heading">
+    <section class="cards-container" id="space" aria-labelledby="space-heading">
       <h2 id="space-heading" class="cards-title">Space</h2>
       <div class="cards">
         <a class="card" href="#garden-center" aria-label="가든 센터">
