--- a/소개.html
+++ b/소개.html
@@ -43,28 +43,28 @@
           <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
         </div>
         <!-- 시설 공간 소개 -->
-        <section id="panel-facility" class="space-panel" role="tabpanel" tabindex="0" href="#facility">
-          <div class="card-grid">
-            <article class="intro-card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="intro-card-img"/>
-              <h3 class="intro-card-title">시설 카드</h3>
+        <section id="panel-facility" class="cards-container" role="tabpanel" tabindex="0" href="#facility">
+          <div class="cards" height="409px">
+            <article class="space-card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
+              <h3 class="space-card-title">시설 카드</h3>
             </article>
-            <article class="intro-card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="intro-card-img"/>
-              <h3 class="intro-card-title">시설 카드</h3>
+            <article class="space-card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
+              <h3 class="space-card-title">시설 카드</h3>
             </article>
           </div>
         </section>
         <!-- 정원 공간 소개 -->
-        <section id="panel-garden-detail" class="space-panel" role="tabpanel" tabindex="0" hidden>
-          <div class="card-grid">
-            <article class="intro-card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="intro-card-img"/>
-              <h3 class="intro-card-title">정원 카드</h3>
+        <section id="panel-garden-detail" class="cards-container" role="tabpanel" tabindex="0" hidden>
+          <div class="cards" height="409px">
+            <article class="space-card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
+              <h3 class="space-card-title">정원 카드</h3>
             </article>
-            <article class="intro-card">
-              <img src="assets/img/main.jpg" alt="예시 이미지" class="intro-card-img"/>
-              <h3 class="intro-card-title">정원 카드</h3>
+            <article class="space-card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
+              <h3 class="space-card-title">정원 카드</h3>
             </article>
           </div>
         </section>
@@ -91,6 +91,27 @@
       <!-- 둘러 보기 -->
       <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
         <div class="cards">
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
+            <article class="card">
+              <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
+            </article>
             <article class="card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
             </article>
