--- a/소개.html
+++ b/소개.html
@@ -38,13 +38,13 @@
       <!-- 공간소개 -->
       <section id="panel-space" class="tab-panel" role="tabpanel" tabindex="0">
         <!-- Toggle Button -->
-        <div class="space-tabs" data-tabs role="tablist" aria-label="공간소개 분류">
+        <div class="space-tabs reveal parallax from-up" data-tabs role="tablist" aria-label="공간소개 분류">
           <button class="tab-button active" role="tab" id="tab-facility" aria-controls="panel-facility" aria-selected="true">시설</button>
           <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
         </div>
         <!-- 시설 공간 소개 -->
         <section id="panel-facility" class="cards-container" role="tabpanel" tabindex="0" href="#facility">
-          <div class="cards" height="409px">
+          <div class="cards reveal parallax from-up" height="409px">
             <article class="space-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
               <h3 class="space-card-title">시설 카드</h3>
@@ -57,7 +57,7 @@
         </section>
         <!-- 정원 공간 소개 -->
         <section id="panel-garden-detail" class="cards-container" role="tabpanel" tabindex="0" hidden>
-          <div class="cards" height="409px">
+          <div class="cards reveal parallax from-up" height="409px">
             <article class="space-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
               <h3 class="space-card-title">정원 카드</h3>
@@ -72,25 +72,16 @@
 
       <!-- 수목원 지도 -->
       <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#map">
-        <div class="article article-container reveal from-up">
-          <h2 class="h2 center">수목원 지도</h2>
-        </div>
         <!-- 지도 -->
         <div class="intro-hero reveal parallax from-up">
-          <iframe
-            width="560"
-            height="315"
-            src="assets/img/main.jpg"
-            title="map"
-            frameborder="0"
-          ></iframe>
+          <img src="assets/img/main.jpg" title="map">
         </div>
         <!-- 스팟 리스트????? -->
       </section>
 
       <!-- 둘러 보기 -->
       <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
-        <div class="cards">
+        <div class="galley-cards reveal parallax from-up">
             <article class="card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
             </article>
