--- a/소개.html
+++ b/소개.html
@@ -81,7 +81,7 @@
 
       <!-- 둘러 보기 -->
       <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
-        <div class="galley-cards reveal parallax from-up">
+        <div class="gallery-cards reveal parallax from-up">
             <article class="card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
             </article>
