--- a/소개.html
+++ b/소개.html
@@ -43,7 +43,7 @@
           <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
         </div>
         <!-- 시설 공간 소개 -->
-        <section id="panel-facility" class="cards-container" role="tabpanel" tabindex="0" href="#facility">
+        <section id="panel-facility" class="tab-panel" role="tabpanel" tabindex="0" href="#facility">
           <div class="cards reveal parallax from-up" height="409px">
             <article class="space-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
@@ -56,7 +56,7 @@
           </div>
         </section>
         <!-- 정원 공간 소개 -->
-        <section id="panel-garden-detail" class="cards-container" role="tabpanel" tabindex="0" hidden>
+        <section id="panel-garden-detail" class="tab-panel" role="tabpanel" tabindex="0" hidden>
           <div class="cards reveal parallax from-up" height="409px">
             <article class="space-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
