--- a/소개.html
+++ b/소개.html
@@ -36,14 +36,14 @@
       </nav>
 
       <!-- 공간소개 -->
-      <section id="panel-space" class="tab-panel" role="tabpanel" tabindex="0">
+      <section id="panel-space" class="tab-panel" role="tabpanel" tabindex="0" href="#space">
         <!-- Toggle Button -->
         <div class="space-tabs reveal parallax from-up" data-tabs role="tablist" aria-label="공간소개 분류">
           <button class="tab-button active" role="tab" id="tab-facility" aria-controls="panel-facility" aria-selected="true">시설</button>
           <button class="tab-button" role="tab" id="tab-garden-detail" aria-controls="panel-garden-detail" aria-selected="false">정원</button>
         </div>
         <!-- 시설 공간 소개 -->
-        <section id="panel-facility" class="tab-panel" role="tabpanel" tabindex="0" href="#facility">
+        <section id="panel-facility" class="tab-panel" role="tabpanel" tabindex="0">
           <div class="cards reveal parallax from-up" height="409px">
             <article class="space-card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="space-card-img"/>
@@ -71,7 +71,7 @@
       </section>
 
       <!-- 수목원 지도 -->
-      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#map">
+      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" href="#map">
         <!-- 지도 -->
         <div class="intro-hero reveal parallax from-up">
           <img src="assets/img/main.jpg" title="map">
@@ -80,7 +80,7 @@
       </section>
 
       <!-- 둘러 보기 -->
-      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
+      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" href="#gallery">
         <div class="gallery-cards reveal parallax from-up">
             <article class="card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
