--- a/소개.html
+++ b/소개.html
@@ -71,7 +71,7 @@
       </section>
 
       <!-- 수목원 지도 -->
-      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" href="#map">
+      <section id="panel-map" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#map">
         <!-- 지도 -->
         <div class="intro-hero reveal parallax from-up">
           <img src="assets/img/main.jpg" title="map">
@@ -80,7 +80,7 @@
       </section>
 
       <!-- 둘러 보기 -->
-      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" href="#gallery">
+      <section id="panel-tour" class="tab-panel" role="tabpanel" tabindex="0" hidden href="#gallery">
         <div class="gallery-cards reveal parallax from-up">
             <article class="card">
               <img src="assets/img/main.jpg" alt="예시 이미지" class="card-img"/>
