added video and changed nav sub width

--- a/index.html
+++ b/index.html
@@ -36,16 +36,10 @@
       </div>
 
       <div class="intro-hero reveal parallax from-up">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/Ofd87YPeZPw?si=iIhZzolyoGvurKwI"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <video class="intro-video">
+          <source src="assets/video/gasirim.mov" type="video/mov">
+          비디오를 재생할 수 없는 환경입니다.
+        </video>
       </div>
 
       <div class="article article-container reveal from-left">
