switched the video and nav sub width

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="intro-hero reveal parallax from-up">
         <video class="intro-video">
-          <source src="assets/video/gasirim.mov" type="video/mov">
+          <source src="assets/video/gasirim.mp4" type="video/mp4">
           비디오를 재생할 수 없는 환경입니다.
         </video>
       </div>
