removed video motion

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="p center">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
       </div>
 
-      <div class="intro-hero reveal parallax from-up" data-video>
+      <div class="intro-hero" data-video>
         <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
           <source src="assets/video/gasirim.mp4" type="video/mp4">
           비디오를 재생할 수 없는 환경입니다.
