removed intro card and placed a map

--- a/소개.html
+++ b/소개.html
@@ -74,7 +74,7 @@
       <section id="수목원지도" class="tab-panel" role="tabpanel" tabindex="0" hidden>
         <!-- 지도 -->
         <div class="intro-hero reveal parallax from-up">
-          <img src="assets/img/main.jpg" title="map">
+          <img src="assets/img/소개/지도.jpg" title="map">
         </div>
         <!-- 스팟 리스트????? -->
       </section>
